Tried Ignoring and discarding unstagables
It got rid of one..

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,63 @@ sysinfo.txt
 *.DS_Store
 
 2670Project/.idea/
+
+Leap/\.idea/\.idea\.Leap/\.idea/vcs\.xml
+
+Leap/\.idea/\.idea\.Re-2670/\.idea/vcs\.xml
+
+Leap/Assets/Resources\.meta
+
+Leap/Assets/Resources/FloatData/AIspeed4\.asset\.meta
+
+Leap/Assets/Scripts\.meta
+
+Leap/Assets/Scripts/Count/RunCountDown\.cs\.meta
+
+Leap/Assets/Scripts/ForEachLoops\.cs
+
+Leap/Assets/Scripts/ForEachLoops\.cs\.meta
+
+Leap/Assets/Scripts/ID Scripts/NameID\.cs\.meta
+
+Leap/Assets/Scripts/MoveScripts/MovePattern\.cs\.meta
+
+Leap/Assets/Scripts/MoveScripts/MovePatternDual\.cs\.meta
+
+Leap/Assets/Scripts/MoveScripts/MovePatternNotGrounded\.cs\.meta
+
+Leap/Assets/Scripts/OtherStuff/FloatBool\.cs\.meta
+
+Re-2670/\.idea/\.idea\.Re-2670/\.idea/vcs\.xml
+
+Re-2670/Assets/Resources\.meta
+
+Re-2670/Assets/Resources/FloatData/AIspeed4\.asset\.meta
+
+Re-2670/Assets/Resources/Materials/Character\.mat\.meta
+
+Re-2670/Assets/Scenes/LearningScenes/Countdown\.unity
+
+Re-2670/Assets/Scenes/LearningScenes/Countdown\.unity\.meta
+
+Re-2670/Assets/Scenes/LearningScenes/Fixing2670\.unity
+
+Re-2670/Assets/Scenes/LearningScenes/WordGame\.unity
+
+Re-2670/Assets/Scripts\.meta
+
+Re-2670/Assets/Scripts/Count/RunCountDown\.cs\.meta
+
+Re-2670/Assets/Scripts/ForEachLoops\.cs
+
+Re-2670/Assets/Scripts/ForEachLoops\.cs\.meta
+
+Re-2670/Assets/Scripts/ID Scripts/NameID\.cs\.meta
+
+Re-2670/Assets/Scripts/MoveScripts/MovePattern\.cs\.meta
+
+Re-2670/Assets/Scripts/MoveScripts/MovePatternDual\.cs\.meta
+
+Re-2670/Assets/Scripts/MoveScripts/MovePatternNotGrounded\.cs\.meta
+
+Re-2670/Assets/Scripts/OtherStuff/FloatBool\.cs\.meta
