--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,5 @@ Re-2670/Assets/Scripts/MoveScripts/MovePatternDual\.cs\.meta
 Re-2670/Assets/Scripts/MoveScripts/MovePatternNotGrounded\.cs\.meta
 
 Re-2670/Assets/Scripts/OtherStuff/FloatBool\.cs\.meta
+
+Leap/Assets/Resources/Materials/Point\.mat\.meta
