Bottle Velocity? Ignored something green

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,5 @@ Re-2670/Assets/Scripts/MoveScripts/MovePatternNotGrounded\.cs\.meta
 Re-2670/Assets/Scripts/OtherStuff/FloatBool\.cs\.meta
 
 Leap/Assets/Resources/Materials/Point\.mat\.meta
+
+Wild/\.idea/\.idea\.Wild/\.idea/vcs\.xml
