--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,5 @@ Re-2670/Assets/Scripts/OtherStuff/FloatBool\.cs\.meta
 Leap/Assets/Resources/Materials/Point\.mat\.meta
 
 Wild/\.idea/\.idea\.Wild/\.idea/vcs\.xml
+
+Leap/Assets/Scripts/LevelScripts/RunCountDown\.cs\.meta
